Support receiver links with snd-settle-mode unsettled
The AMQP adapter now also accepts receiver links with snd-settle-mode
"settled" in order to better test uploading of presettled (telemetry)
messages during integration tests.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>